fix app not scrolling on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 
 .App {
-  overflow-x: hidden;
+  overflow: hidden;
   // padding-bottom: 100px;
   // @media screen and (max-width: 473px) {
   //   padding-bottom: 170px;
